--- a/.config/eww/eww.scss
+++ b/.config/eww/eww.scss
@@ -1,11 +1,9 @@
 @import 'styles/palette'
-@import 'styles/datetime'
-@import 'styles/calendar'
 
-*{
+* {
   all: unset;
-  font-family: Hack Nerd Font Mono;
-  font-family: feather;
+  font-family: Maple Mono NL NF CN;
+  /* font-family: Hack Nerd Font Mono; */
   font-weight: bold;
   background: transparent;
   border-radius: 18px;
@@ -15,158 +13,71 @@
   background-color: $crust;
 }
 
+.container {
+  /* background-color: $red; */
+  background-color: $mantle;
+  margin-top: 10px;
+}
 
-/* .settings-box { */
-/*   background-color: $crust; */
-/*   .settings { */
-/*     background-color: $mantle; */
-/*     border: 0px solid $surface2; */
-/*     margin-bottom: 20px; */
+.powermenu-container {
+  /* background-color: $red; */
+  margin-top: 10px;
+}
+
+// all switcher widgets
+/* .switcher-box { */
+/*   .switcher-label { */
+/*     font-size: 18px; */
+/*     padding: 10px 0px 0px 10px; */
 /*   } */
-/*   .control-switcher { */
-/*     .first-row { */
-/*       margin-top: 20px; */
+/*   .switcher-btn-box { */
+/*     margin: 10px 15px 0px 15px; */
+/*     border-radius: 100px; */
+/*     .separator { */
+/*         font-size: 2px; */
 /*     } */
-/*     .second-row { */
-/*       margin-top: 10px; */
-/*       margin-bottom: 30px; */
+/*     .switcher-btn { */
+/*       font-size: 26px; */
+/*       padding: 10px 20px 10px 20px; */
+/*       border-radius: 100px 0px 0px 100px; */
+/*     } */
+/*     .arrow-btn { */
+/*       font-size: 26px; */
+/*       font-weight: bold; */
+/*       padding: 10px 20px 10px 20px; */
+/*       border-radius: 0px 100px 100px 0px; */
+/*     } */
+/*     .switcher-btn-on { */
+/*       background-color: $blue; */
+/*       &:hover { */
+/*         background-color: $subtext1; */
+/*       } */
+/*     } */
+/*     .switcher-btn-off { */
+/*       background-color: $surface1; */
+/*       &:hover { */
+/*         background-color: $blue; */
+/*       } */
+/*     } */
+/*     .arrow-btn-on { */
+/*       background-color: $blue; */
+/*       &:hover { */
+/*         background-color: $subtext1; */
+/*       } */
+/*     } */
+/*     .arrow-btn-off { */
+/*       background-color: $surface1; */
+/*       &:hover { */
+/*         background-color: $blue; */
+/*       } */
 /*     } */
 /*   } */
 /* } */
-/**/
 
-
-// all switcher widgets
-.switcher-box {
-  .switcher-label {
-    font-size: 18px;
-    padding: 10px 0px 0px 10px;
-    /* background-color: $text; */
-  }
-  .switcher-btn-box {
-    margin: 10px 15px 0px 15px;
-    border-radius: 100px;
-    .separator {
-        font-size: 2px;
-    }
-    .switcher-btn {
-      font-size: 26px;
-      padding: 10px 20px 10px 20px;
-      border-radius: 100px 0px 0px 100px;
-    }
-    .arrow-btn {
-      font-size: 26px;
-      font-weight: bold;
-      padding: 10px 20px 10px 20px;
-      border-radius: 0px 100px 100px 0px;
-    }
-    .switcher-btn-on {
-      background-color: $blue;
-      &:hover {
-        background-color: $subtext1;
-      }
-    }
-    .switcher-btn-off {
-      background-color: $surface1;
-      &:hover {
-        background-color: $blue;
-      }
-    }
-    .arrow-btn-on {
-      background-color: $blue;
-      &:hover {
-        background-color: $subtext1;
-      }
-    }
-    .arrow-btn-off {
-      background-color: $surface1;
-      &:hover {
-        background-color: $blue;
-      }
-    }
-  }
-}
-
-
-.settings_icon {
-  font-size: 34px;
-  margin: 0px 40px 0 40px;
-  /* margin-left: 20px; */
-  /* margin-right: 20px; */
-}
-
-scale trough {
-  all: unset;
-  background-color: #22242b;
-  box-shadow: 0 2px 3px 2px #06060b;
-  border-radius: 16px;
-  min-height: 20px;
-  min-width: 390px;
-  margin: 0px 10px 0px 10px;
-}
-
-.backlight {
-  /* background-color: $base; */
-  color: $yellow;
-  margin-top: 30px;
-  trough highlight {
-    /* background-image: linear-gradient(to right, #e4c9af 30%, #f2cdcd 50%, #e0b089 100% *50); */
-    background-image: linear-gradient(to right, #FFEDD5 30%, #FDD9A5 50%, $yellow 100% *50);
-    border-radius: 10px;
-  }
-  .backlight_icon {
-    /* background-color: $text; */
-  }
-}
-
-.volume {
-  /* background-color: $crust; */
-  color: $sky;
-  margin-top: 30px;
-  trough highlight {
-    background-image: linear-gradient(to right, #afcee0 30%, #a1bdce 50%, #77a5bf 100% *50);
-    border-radius: 10px;
-  }
-}
-
-.battery {
-  /* background-color: $crust; */
-  color: $flamingo;
-  margin-top: 30px;
-  margin-bottom: 30px;
-  trough highlight {
-    background-image: linear-gradient(to right, #FFDAB9 30%, #FFC4C4 50%, $flamingo 100%);
-    border-radius: 10px;
-  }
-}
-
-.updates-box {
-  color: $text;
-  font-size: 30px;
-  .updates-icon {
-    padding: 12px 20px 12px 38px;
-  }
-}
-
-.power-menu {
-  font-size: 30px;
-  .poweroff {
-    padding: 12px 38px 12px 24px;
-    color: $red;
-  }
-  .others {
-    .reboot, .lock, .log-out {
-      padding: 12px 24px 12px 24px;
-    }
-    .reboot {
-      color: $pink;
-    }
-    .lock {
-      color: $yellow;
-    }
-    .log-out {
-      padding-left: 0px;
-      color: $blue;
-    }
-  }
-}
+@import 'styles/datetime'
+@import 'styles/calendar'
+@import 'styles/battery'
+@import 'styles/power-menu'
+@import 'styles/control-bar'
+@import 'styles/monitor'
+@import 'styles/long-switcher'
